[package]
name = "hentai"
version = "0.2.2"
description = "API wrapper for nhentai.net"
authors = ["EmperorParzival <29981946+EmperorParzival@users.noreply.github.com>"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["hentai", "nhentai", "hmanga", "anime", "nsfw"]
repository = "https://github.com/EmperorParzival/hentai.git"
homepage = "https://github.com/EmperorParzival/hentai"
documentation = "https://docs.rs/hentai"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
hyper-tls = "0.5.0"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
hyper = { version = "0.14", features = ["client", "runtime", "http1"] }

clap = { version = "2.33.3", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[dev-dependencies]
rustfmt = "0.10.0"
cargo-edit = "0.7.0"

[features]
cli = ["tokio", "clap"]

[lib]
name = "hentai"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "hentai"
path = "src/hentai/main.rs"
required-features = ["cli"]
